--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,8 @@ name = "pypi"
 [dev-packages]
 flask = "*"
 pylint = "*"
+flask-sqlalchemy = "*"
+flask-login = "*"
 
 [requires]
 python_version = "3.8"
