--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ flask = "*"
 pylint = "*"
 flask-sqlalchemy = "*"
 flask-login = "*"
+flask-migrate = "*"
+flask-script = "*"
 
 [requires]
 python_version = "3.8"
