setting default env variables

--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
-[setting]
+[example]
 SECRET_KEY = somerandomkey1234
 SECURITY_PASSWORD_SALT = randompassword
-MAIL_SERVER = smtp.googlemail.com
+MAIL_SERVER = smtp.mail.com
 MAIL_USERNAME = mail@mail.com
 MAIL_PASSWORD = password
